fix:fix layout booking in homepage

--- a/single-court.html
+++ b/single-court.html
@@ -356,18 +356,7 @@
                     lorem ut libero malesuada feugiat aliquet quam id dui posuere blandit. Nulla quis lorem ut libero
                     malesuada feugiat malesuada. Nulla porttitor lectus nibh.</p>
                   <table class="infolist">
-                    <tr>
-                      <td class="info-heading">Destination</td>
-                      <td class="info">Australia</td>
-                    </tr>
-                    <tr>
-                      <td class="info-heading">Departure</td>
-                      <td class="info">3166 Providence Lane, Mira Loma, CA</td>
-                    </tr>
-                    <tr>
-                      <td class="info-heading">Departure Time</td>
-                      <td class="info">Approximately 8.00AM</td>
-                    </tr>
+
                     <tr>
                       <td class="info-heading">Age Restriction</td>
                       <td class="info">Must be 13+</td>
@@ -381,9 +370,6 @@
                       <td>
                         <table class="sub-infolist">
                           <tr>
-                            <td class="info">5 Star Accommodation</td>
-                            <td class="info">Airport Transfer</td>
-                            <td class="info">Breakfast</td>
                             <td class="info">Personal Guide</td>
                           </tr>
                         </table>
@@ -394,15 +380,15 @@
                       <td>
                         <table class="sub-infolist">
                           <tr>
-                            <td class="info">Gallery Ticket</td>
+
                             <td class="info">Lunch</td>
                           </tr>
                         </table>
                       </td>
                     </tr>
                     <tr>
-                      <td class="info-heading">Return Time</td>
-                      <td class="info">Approximately 7.00AM</td>
+                      <td class="info-heading">Minimum Time</td>
+                      <td class="info">2 Hours</td>
                     </tr>
                   </table>
                 </div>
