fix:user correction

--- a/court.html
+++ b/court.html
@@ -329,13 +329,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -355,13 +355,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -381,13 +381,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -407,13 +407,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -433,13 +433,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -459,13 +459,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -485,13 +485,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -511,13 +511,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -537,13 +537,13 @@
                       <a href="single-court.html"><img src="assets/img/tours/tour-1-7.jpg" alt="Package Image"></a>
                     </div>
                     <div class="package-content">
-                      <div class="package-review">
+                      <!--  <div class="package-review">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="far fa-star"></i>
                         <i class="far fa-star"></i>
-                      </div>
+                      </div> -->
                       <h3 class="package-title"><a href="single-court.html">Basketball Court</a></h3>
                       <p class="package-text">Synthetic with anti-slip coating</p>
                       <div class="package-meta">
@@ -571,7 +571,7 @@
             <div class="col-lg-3">
               <div class="sidebar-area tours-sidebar">
                 <div class="widget">
-                  <h3 class="widget_title">Plan Your Match</h3>
+                  <!-- <h3 class="widget_title">Plan Your Match</h3>
                   <p class="widget_text">Donec rutrum congue leo elit In a eget malesuadga blandit.</p>
                   <form class="booking-form">
                     <div class="form-group ">
@@ -590,54 +590,54 @@
                       <i class="fas fa-thumbtack"></i>
                       <input type="number" placeholder="Total Persons?" />
 
-                    </div>
-                    <div class="price_slider_wrapper">
-                      <h3 class="widget_title">Filter By Category</h3>
-                      <div class="form-group">
-                        <i class="fas fa-calendar-alt"></i>
-                        <select class="form-select" name="name">
-                          <option value="" selected="selected" disabled="disabled" hidden="">Select Category</option>
-                          <option value="">Category 1</option>
-                          <option value="">Category 2</option>
-                          <option value="">Category 3</option>
-                          <option value="">Categroy 4</option>
-                        </select>
-                      </div>
-                      <h3 class="widget_title">Filter By Price</h3>
-                      <div class="price_slider"></div>
-                      <div class="price_label">
-                        Price: <span class="from">$10</span> — <span class="to">$75</span>
-                      </div>
-                    </div>
-                    <div class="price_slider_wrapper">
-                      <h3 class="widget_title">Filter By Location</h3>
-                      <div class="form-group">
-                        <i class="fas fa-calendar-alt"></i>
-                        <select class="form-select" name="name">
-                          <option value="" selected="selected" disabled="disabled" hidden="">Select Category</option>
-                          <option value="">Location 1</option>
-                          <option value="">Location 2</option>
-                          <option value="">Location 3</option>
-                          <option value="">Location 4</option>
-                        </select>
-                      </div>
-
-                    </div>
+                    </div> -->
+                  <div class="price_slider_wrapper">
+                    <h3 class="widget_title">Filter By Category</h3>
                     <div class="form-group">
-                      <div class="chekbox-area">
-                        <input type="radio" id="popular" name="fav_language" value="popular" checked />
-                        <label for="popular">Popular</label>
-                      </div>
-                      <div class="chekbox-area">
-                        <input type="radio" id="trendy" name="fav_language" value="trendy" />
-                        <label for="trendy">Trendy</label>
-                      </div>
-                      <div class="chekbox-area">
-                        <input type="radio" id="latest" name="fav_language" value="latest" />
-                        <label for="latest">Latest</label>
-                      </div>
+                      <i class="fas fa-dropdown-alt"></i>
+                      <select class="form-select" name="name">
+                        <option value="" selected="selected" disabled="disabled" hidden="">Select Category</option>
+                        <option value="">Category 1</option>
+                        <option value="">Category 2</option>
+                        <option value="">Category 3</option>
+                        <option value="">Categroy 4</option>
+                      </select>
                     </div>
-                    <button class="vs-btn style4 w-100">Search</button>
+                    <h3 class="widget_title">Filter By Price</h3>
+                    <div class="price_slider"></div>
+                    <div class="price_label">
+                      Price: <span class="from">$10</span> — <span class="to">$75</span>
+                    </div>
+                  </div>
+                  <div class="price_slider_wrapper">
+                    <h3 class="widget_title">Filter By Location</h3>
+                    <div class="form-group">
+                      <i class="fas fa-calendar-alt"></i>
+                      <select class="form-select" name="name">
+                        <option value="" selected="selected" disabled="disabled" hidden="">Select Category</option>
+                        <option value="">Location 1</option>
+                        <option value="">Location 2</option>
+                        <option value="">Location 3</option>
+                        <option value="">Location 4</option>
+                      </select>
+                    </div>
+
+                  </div>
+                  <div class="form-group">
+                    <div class="chekbox-area">
+                      <input type="radio" id="popular" name="fav_language" value="popular" checked />
+                      <label for="popular">Popular</label>
+                    </div>
+                    <div class="chekbox-area">
+                      <input type="radio" id="trendy" name="fav_language" value="trendy" />
+                      <label for="trendy">Trendy</label>
+                    </div>
+                    <div class="chekbox-area">
+                      <input type="radio" id="latest" name="fav_language" value="latest" />
+                      <label for="latest">Latest</label>
+                    </div>
+                  </div>
+                  <button class="vs-btn style4 w-100">Search</button>
                   </form>
                 </div>
               </div>
