--- a/single-court.html
+++ b/single-court.html
@@ -366,7 +366,7 @@
                       <td class="info">Casual, light And comfortable</td>
                     </tr>
                     <tr>
-                      <td class="info-heading">Service Included</td>
+                      <td class="info-heading">Facilities</td>
                       <td>
                         <table class="sub-infolist">
                           <tr>
@@ -375,17 +375,7 @@
                         </table>
                       </td>
                     </tr>
-                    <tr>
-                      <td class="info-heading">Service Not Included</td>
-                      <td>
-                        <table class="sub-infolist">
-                          <tr>
 
-                            <td class="info">Lunch</td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
                     <tr>
                       <td class="info-heading">Minimum Time</td>
                       <td class="info">2 Hours</td>
