fix:layout issue and removed per client

--- a/index.html
+++ b/index.html
@@ -248,16 +248,16 @@
       </div>
 
       <div class="hero-bottom">
-        <div class="container-fluid">
+        <div class="container">
           <form class="hero-form">
-            <div class="row">
+            <div class="row justify-content-center">
               <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="form-group ">
                   <i class="fas fa-compass"></i>
                   <input type="date" class="form-control" placeholder="Select Booking Date" />
                 </div>
               </div>
-              <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="form-group">
                   <i class="fas fa-calendar-alt"></i>
                   <select class="form-select" name="name">
@@ -270,26 +270,22 @@
                   </select>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+              <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="form-group">
                   <i class="fas fa-calendar-alt"></i>
                   <select class="form-select" name="name">
                     <option value="" selected="selected" disabled="disabled" hidden="">Select Type</option>
-                    <option value="">Basketball</option>
-                    <option value="">Tennis</option>
-                    <option value="">Badminton</option>
-                    <option value="">Football</option>
-                    <option value="">Cricket</option>
+                    <option value="">Type 1</option>
+                    <option value="">Type 1</option>
+                    <option value="">Type 1</option>
+                    <option value="">Type 1</option>
+                    <option value="">Type 1</option>
+
                   </select>
                 </div>
               </div>
+
               <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-                <div class="form-group">
-                  <i class="fas fa-thumbtack"></i>
-                  <input type="time" value="18:00" class="form-control" placeholder="Select Booking Date" />
-                </div>
-              </div>
-              <div class="col-lg-2 col-md-6 col-sm-6 col-12">
                 <button class="vs-btn style4">Book Now</button>
               </div>
             </div>
